--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = featheresp32-s2
 framework = arduino
 board_build.partitions = partitions.csv
+lib_deps =
+  links2004/WebSockets @ ^2.4.1
